sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:8: error: not found: value l
		for (k<-0 to n-2-l) {
                                 ^