sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() {
	var swapped:Boolean = true
	val n:Int = getNombreValeurs()
	
	while (swapped) {
		swapped = false
		for (k<-0 to n-2-l) {
			if (plusPetit(k+1,k)){	echange(k+1,k)
								swapped=true}
}
}


}
